--- a/console/app/assets/stylesheets/console/_base.scss
+++ b/console/app/assets/stylesheets/console/_base.scss
@@ -60,3 +60,6 @@ label {color: inherit;}
 code, pre {
 	background-color: $consolePreBackground;
   }
+  .popover code {
+    background-color: #f5f5f5;
+  }
